[package]
name = "string_error_wrap"
version = "0.1.0"
edition = "2021"
authors = ["taitep <taitep@taitep.se>"]
description = "Simple crate providing a macro for an error type wrapping a String."
license = "MIT"
repository = "https://github.com/taitep/string_error_wrap"

[dependencies]
thiserror = "1"
